--- a/okdan.html
+++ b/okdan.html
@@ -1,1 +1,8 @@
-text
+<!DOCTYPE html>
+<html>
+<body>
+
+<body style="margin: 0px; background: #0e0e0e;"><img style="-webkit-user-select: none;background-position: 0px 0px, 10px 10px;background-size: 20px 20px;background-image:linear-gradient(45deg, #eee 25%, transparent 25%, transparent 75%, #eee 75%, #eee 100%),linear-gradient(45deg, #eee 25%, white 25%, white 75%, #eee 75%, #eee 100%);" src="http://deredactie.be/polopoly_fs/1.2837290!image/2709951332.jpg_gen/derivatives/landscape670/2709951332.jpg"></body>
+
+</body>
+</html>
